--- a/index.html
+++ b/index.html
@@ -507,11 +507,11 @@
             <div class="contacts-grid">
               <!-- Левая колонка -->
               <div class="contacts-left">
-                <div>Kolotilov Maksim</div>
-                <div>Phone: +34 695 406 941</div>
-                <div>
+                <div style="font-weight: bold;">Kolotilov Maksim</div>
+                <div style="font-weight: bold;">Phone: +34 695 406 941</div>
+                <div style="font-weight: bold;">
                   Email:
-                  <a href="mailto:jobkolot@gmail.com">jobkolot@gmail.com</a>
+                  <a style="font-weight: bold;" href="mailto:jobkolot@gmail.com">jobkolot@gmail.com</a>
                 </div>
               </div>
               <!-- Правая колонка -->
