--- a/index.html
+++ b/index.html
@@ -542,8 +542,7 @@
             <p><strong>Duration:</strong> 2 months</p>
             <p>
                 <strong>Project Description:</strong><br />
-                Developed a Telegram bot that automates payment acceptance using YooMoney API. After successful payment,
-                users received their virtual goods.
+                Built a Telegram bot to streamline payment handling through the YooMoney API. The bot allowed users to make payments and receive virtual goods after their payments were confirmed.
             </p>
             <p>
                 <strong>Key Responsibilities:</strong><br />
@@ -577,9 +576,7 @@
             <p><strong>Duration:</strong> 4 months</p>
             <p>
                 <strong>Project Description:</strong><br />
-                Developed a Telegram bot constructor that allows users to create their own bot instances to track
-                channel activities.
-                The bot also automates subscription requests, manages ad campaigns, and saves message templates.
+                Created a Telegram bot framework enabling users to generate custom bot instances for monitoring activity in channels. The bot automated subscription request management for groups and enabled planning message campaigns and saving templates. All interaction was conducted through the bot's chat interface, without any graphical interface or website.
             </p>
             <p>
                 <strong>Key Responsibilities:</strong><br />
@@ -614,7 +611,7 @@
             <p><strong>Duration:</strong> 1 month</p>
             <p>
                 <strong>Project Description:</strong><br />
-                Created a Telegram bot to automatically copy content from different channels.
+                I developed a Telegram user-bot to automatically copy content from different channels.
                 The bot monitored new publications, copied media files, added custom descriptions,
                 and published them to a specified channel. Future plans include AI integration for generating unique
                 descriptions.
